# household_Ledger_ai

./: .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  download_data.py  install.sh  pyproject.toml  pytest.ini
docs/: ROADMAP.md  SDS.md
eval/: run_eval.py
eval/dataset/: test_set.json
eval/reports/: ledger_eval_report.md
src/household_ledger/: demo_app.py  main.py
src/household_ledger/common/: config.py
src/household_ledger/domain/: models.py
src/household_ledger/graph/: __init__.py  nodes.py  state.py  workflow.py
src/household_ledger/infrastructure/: ingestor.py  llm_client.py  neo4j_client.py
src/household_ledger/interfaces/: llm.py
tests/: test_env_setup.py
tests/common/: test_config.py
tests/graph/: test_nodes.py  test_nodes_manual.py  test_workflow.py  test_workflow_manual.py
tests/infrastructure/: test_ingestor.py  test_llm_client.py  test_neo4j_client.py
tests/interfaces/: test_llm.py
